--- a/src/types/ComponentNode.css
+++ b/src/types/ComponentNode.css
@@ -1,12 +1,17 @@
-/* src/ComponentNode.css */
+/*
+ * ComponentNode.css
+ * Estilos para el componente visual de nodo en el diagrama.
+ * Define la apariencia del nodo, sus puertos y los handles de conexión.
+ */
 
+/* Contenedor principal del nodo */
 .component-node {
-  /* Elimina background-color y cualquier propiedad de fondo aquí */
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+/* Encabezado del nodo */
 .component-node-header {
   padding: 8px 10px;
   background-color: #f0f0f0;
@@ -18,27 +23,32 @@
   white-space: normal;
 }
 
+/* Etiqueta del nodo */
 .node-tag {
   color: #555;
   font-size: 12px;
   margin-right: 4px;
 }
 
+/* Nombre del componente */
 .component-name-label {
   font-size: 14px;
   color: #333;
 }
 
+/* Contenedor de los puertos del nodo */
 .component-node-ports-container {
   padding: 10px;
 }
 
+/* Lista de puertos */
 .ports-list {
   display: flex;
   flex-direction: column;
   gap: 6px;
 }
 
+/* Elemento individual de puerto */
 .port-item {
   display: flex;
   align-items: center;
@@ -51,6 +61,7 @@
   min-height: 24px;
 }
 
+/* Botón de acciones del puerto */
 .port-item-button {
   background: none;
   border: none;
@@ -60,19 +71,22 @@
   align-items: center;
   gap: 4px;
   color: #333;
-  font-size: 10px; /* Reducción del tamaño de la fuente */
+  font-size: 10px;
 }
 
+/* Nombre del puerto */
 .port-name {
-  font-size: 10px; /* Reducción del tamaño de la fuente */
+  font-size: 10px;
   font-weight: bold;
 }
 
+/* Etiqueta de tipo de puerto */
 .port-type-tag {
-  font-size: 9px; /* Reducción del tamaño de la fuente */
+  font-size: 9px;
   color: #666;
 }
 
+/* Botón para eliminar puerto */
 .delete-port-button {
   background: none;
   border: none;
@@ -118,9 +132,11 @@
 .custom-handle.source.react-flow__handle {
   background-color: #ffc107;
 }
+
+/* Nodo de React Flow */
 .react-flow__node.componentNode {
   padding: 0;
   border: none;
   border-radius: 5px;
-  overflow: hidden; /* Esto es importante para que el color no se salga de los bordes */
+  overflow: hidden;
 }
