generate bottomhalf implemented
feat: Connectus now generate bottomhalf succefully.
fix: fixed some typos
feat: new data type : null
feat: connections can be erased by click, drag and drop it to emty space of the web interface.
feat: added JSDoc comments to all functions and attributes

--- a/src/types/ContextMenu.css
+++ b/src/types/ContextMenu.css
@@ -1,4 +1,7 @@
-/* src/ContextMenu.css */
+/*
+ * ContextMenu.css
+ * Estilos para el menú contextual que aparece al hacer clic derecho en un componente.
+ */
 
 .context-menu {
   position: absolute;
