--- a/src/types/index.css
+++ b/src/types/index.css
@@ -1,3 +1,7 @@
+/*
+ * index.css
+ * Estilos base y reseteo para la aplicación, generados por Vite.
+ */
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
